[metadata]
name = aCT-client
version = 0.1
author = aCT team
author_email = act-dev@cern.ch
description = Client for ARC Control Tower
license = Apache 2.0

[options]
python_requires = >= 3.6
packages = find:
package_dir = =src

install_requires =
    cryptography
    pyyaml
    lark

    pyarcrest @ git+https://github.com/jakobmerljak/pyarcrest.git

[options.packages.find]
where=src

[options.entry_points]
console_scripts =
    act = act_client.cli:main
